frontend/src/styles/PetCard.css
/* PetCard.css */

.card {
    width: 20rem;
    height: 26rem;
    border-radius: 1rem;
    border-style: solid;
    border-color: #BFB2D4;
    background-color: #E8E6F0;
    color: #6b5b95;
}
.card:hover {
    cursor: pointer;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
    transform: scale(1.01);
}

.image {
    background-color: #5AD8CC;
    margin: 1rem auto 2rem auto;
    border-radius: .5rem;
    width: 80%;
    aspect-ratio: 1/1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.petImg {
    display: block;
    margin: auto;
    border-style: solid;
    border-radius: .5rem;
    border-color: white;
    border-width: 2px;
    width: 100%;
    height: 100%;
    object-fit: contain;
    overflow: hidden;
}

.petName {
    display: flex;
    width: 75%;
    height: 2.5rem;
    margin: auto;
    background-color: #FFE0C2;
    border-style: solid;
    border-width: 2px;
    border-color: #6b5b95;
    border-radius: 1rem;
    align-items: center;
}

.name {
    margin: auto;
    justify-self: center;
    text-overflow: ellipsis;
    text-wrap: nowrap;
    overflow: hidden;
    margin: 5%;
}

.fav {
    display: flex;
    height: 1rem;
    width: 1rem;
    align-items: center;
    justify-content: center;
    margin-right: .5rem;
    background: transparent;
    border: none;
}

.fav:hover {
    cursor: pointer;
    transform: scale(1.2);
    animation: pulse 1.5s ease-in-out infinite;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
}

@keyframes pulse {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.15);
    }
    100% {
        transform: scale(1);
    }
}

.petInfo {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
}

.petAge {
    margin-top: .5rem;
    margin-bottom: 0px;
}

.petDesc {
    font-size: .75rem;
    margin-top: 0px;
    margin-bottom: 2rem;
}

